# rust-practice

./: README.md
install/: readme.md
practice/hello-world/: hello-world.rs  readme.md
tools/cargo/: readme.md
tools/cargo/chapter2/src/: main.rs
tools/cargo/chapter2/src/parsemath/: parser.rs  token.rs  tokenizer.rs
tools/cargo/deps-example/: Cargo.toml
tools/cargo/deps-example/src/: main.rs
tools/cargo/hello_bi/: Cargo.toml
tools/cargo/hello_bi/src/: second.rs
tools/cargo/hello_lib/: Cargo.toml
tools/cargo/hello_lib/src/: lib.rs
tools/cargo/integ-test-example/doc/: itest.html  itest.md
tools/cargo/integ-test-example/src/: lib.rs
tools/cargo/integ-test-example/tests/: integration_test1.rs
tools/cargo/rstat/: Cargo.toml
tools/cargo/rstat/src/: errors.rs  srcstats.rs
tools/cargo/stdlearn/: Cargo.toml
tools/cargo/stdlearn/src/: createdir.rs  dirio.rs  fileio.rs  main.rs
tools/cargo/test-example/: Cargo.toml
tools/cargo/test-example/src/: main.rs
tools/toml/: readme.md
