[package]
name = "stdlearn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "fileIo"
path = "src/fileio.rs"

[[bin]]
name = "dirIo"
path = "src/dirio.rs"

[[bin]]
name = "createDirIo"
path = "src/createdir.rs"
